--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,3 +98,7 @@ code {
   -ms-overflow-style: none; /* IE/Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.swiper-slide {
+  height: 20px;
+}
